@@ -1,3 +1,5 @@
+Apr 08, 2022: libarchive 3.6.1 released
+
 Feb 09, 2022: libarchive 3.6.0 released
 
 Feb 08, 2022: libarchive 3.5.3 released
